# camplify-crawler

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml  scrapy.cfg
camplify_crawler/: asgi.py  items.py  middlewares.py  pipelines.py  settings.py  urls.py  wsgi.py
camplify_crawler/spiders/: nap.py
