[tool.poetry]
name = "camplify-crawler"
version = "0.1.0"
description = "Find a campsite in Japan"
authors = ["otajisan <mtaji@morningcode.io>"]

[tool.poetry.dependencies]
python = "^3.10"
mysqlclient = "^2.1.0"
Scrapy = "^2.6.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
